2002-04-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-redirect-with-get): New user option.
	(w3m-w3m-retrieve): If w3m-redirect-with-get is non-nil, use GET
	method after redirection; Ask user to use POST data after redirection.
	(w3m-w3m-attributes): Set w3m-current-redirect as a cons cell of
	(CODE . LOCATION).
	(w3m-w3m-dump-head-source): Don't cache content if the response code is
	one of 302, 303, 307.
	(w3m-w3m-retrieve): Change POST redirection behavior according to
	response code.

	* octet.el (mime-preview-octet): Change behavior according to
	whether the return value of mime-entity-content is multibyte or not.
	(mime-view-octet): Ditto.

	* w3m.el (w3m-w3m-retrieve): Don't call w3m-cache-request-header
	when type is nil.

2002-04-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-follow-redirection): New user option.
	(w3m-w3m-attributes): Set w3m-current-redirect as nil.
	(w3m-cookie-command-arguments): Abolish.
	(w3m-request-arguments): Use cookie only when w3m-use-cookies is
	non-nil.
	(w3m-header-arguments): New function.
	(w3m-w3m-retrieve): Treat redirection when w3m-follow-redirection
	is non-nil.
	(w3m-w3m-retrieve-1): Renamed from w3m-w3m-retrieve.
	(w3m-prepare-content): Don't care w3m-current-redirect.
	(w3m-goto-url): Ditto.

	* w3m-form.el (w3m-form-new): Added argumnet enctype.
	(w3m-form-enctype): New macro.
	(w3m-form-plist): Changed definition.
	(w3m-form-put-property): Ditto.
	(w3m-form-make-form-data): Removed optional argument urlencode;
	Encode form data acording to w3m-form-enctype.
	(w3m-form-mee-new): Set enctype field.
	(w3m-form-parse-and-fontify): Parse enctype.
	(w3m-form-submit): Don't pass enctype argumnet.

2002-04-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put a property of
	`w3m-name-anchor' as a list.
	(w3m-move-point-for-localcgi): Use `w3m-search-name-anchor'.
	(w3m-search-name-anchor): Use `member' when compare a name with