@@ -1194,11 +1194,17 @@ character."
 (defun w3m-form-submit (form &optional name value)
   (when (and name (not (zerop (length name))))
     (w3m-form-put form name value))
-  (let ((url (or (w3m-form-action form)
-		 (if (string-match "\\?" w3m-current-url)
-		     (substring w3m-current-url 0 (match-beginning 0))
-		   w3m-current-url))))
-    (cond ((eq 'get (w3m-form-method form))
+  (let* ((orig-url w3m-current-url)
+	 (url (or (w3m-form-action form)
+		  (if (string-match "\\?" w3m-current-url)
+		      (substring w3m-current-url 0 (match-beginning 0))
+		    w3m-current-url))))
+    (cond ((and (not (string= url orig-url))
+		(string-match "^https://" orig-url)
+		(string-match "^http://" url)
+		(not (y-or-n-p (format "Send POST data to '%s'?" url))))
+	   (ding))
+	  ((eq 'get (w3m-form-method form))
 	   (w3m-goto-url
 	    (concat url "?" (w3m-form-make-form-data form))))
 	  ((eq 'post (w3m-form-method form))
